src/evaluator/statement/return_statement/tests/snapshots/rust_monkey_interpreter__evaluator__statement__return_statement__tests__test_evaluator_return_nodes_case5.snap
---
source: src/evaluator/statement/return_statement/tests/mod.rs
expression: "crate::evaluator::evaluate(crate::evaluator::evaluator_context::EvaluatorContext::new(),\n                           crate::syntax_analysis::get_abstract_syntax_tree(crate::lexical_analysis::get_tokens(code)))"
---
[
  {},
  "TRUE"
]
